<resources>
    <string name="app_name">Dialog1</string>
    <string name="btn_1">Just Dialog</string>
    <string name="btn_2">Yes, Maybe and No</string>
    <string name="btn_3">Items</string>
    <string name="btn_4">Single Choice</string>
    <string name="btn_5">Multiple Choice</string>
    <string name="btn_6">Custom Layout</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="btn_7">Date Picker Dialog</string>
    <string name="btn_8">Time Picker Dialog</string>
    <string name="btn_9">Progress Dialog</string>
    <string name="btn_10">Progress Dialog Horizontal</string>

    <string name="dialog_1_title_text">Demo</string>
    <string name="dialog_1_message_text">Dialog1 Activity</string>

    <string name="dialog_6_title_text">Sign in</string>

    <string name="simon_username">simon@gmail.com</string>
    <string name="simon_password">iamsimon</string>
    <string name="sign_in_failure">Failure!</string>
    <string name="sign_in_success">Success!</string>

    <string name="menu_add_txt">Add</string>
    <string name="menu_delete_txt">Delete</string>
    <string name="menu_help_txt">Help</string>
    <string name="menu_more_txt">More</string>
    <string name="menu_camera_txt">Camera</string>
    <string name="menu_compass_txt">Compass</string>
    <string name="menu_upload_txt">Upload</string>
</resources>
